# offset-dumper

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
backend/: CMakeLists.txt
backend/src/: aob_scanner.cpp  aob_scanner.hpp  json_bridge.cpp  main.cpp  offset_dump.cpp  offset_dump.hpp  pe_parser.cpp  pe_parser.hpp  pointer_scan.cpp  pointer_scan.hpp  process.cpp  process.hpp  utils.cpp  utils.hpp
electron/: main.js  preload.js
src/: App.css  App.jsx  i18n.js  index.css
